# tarefa2

./: CMakeLists.txt  README.md  main.c
